# Openstax_workshop

./: .gitignore  data_exploration.ipynb  pyproject.toml
data/: assignable_original_release.csv  assignable_synthetic_release.csv  orig_activity.csv  synth_activity.csv
script/: generate.py  generate_edm_release.py  tests.py
